Added, Save, Load and Paste for Parameters

--- a/css/custom.css
+++ b/css/custom.css
@@ -77,3 +77,13 @@
 .f2gutter {
     width: 1em;
 }
+
+#load-parameter-file {
+    display: none;
+}
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
