Add fullscreen mode to diagram

--- a/css/custom.css
+++ b/css/custom.css
@@ -81,3 +81,17 @@
 .f2mb0 {
     margin-bottom: 0px !important;
 }
+
+iframe.fullscreen {
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    width: 100%;
+    border: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    z-index: 999999;
+    height: 100%;
+}
